crates/pg_syntax/tests/snapshots/postgres_regress/timestamp@48.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "INSERT INTO TIMESTAMP_TBL VALUES ('Feb 10 5:32PM 1997');"
---
InsertStmt@0..56
  Insert@0..6 "INSERT"
  Whitespace@6..7 " "
  Into@7..11 "INTO"
  Whitespace@11..12 " "
  RangeVar@12..25
    Ident@12..25 "TIMESTAMP_TBL"
  Whitespace@25..26 " "
  SelectStmt@26..54
    Values@26..32 "VALUES"
    Whitespace@32..33 " "
    Ascii40@33..34 "("
    List@34..54
      AConst@34..54
        Sconst@34..54 "'Feb 10 5:32PM 1997'"
  Ascii41@54..55 ")"
  Ascii59@55..56 ";"

