crates/pg_syntax/tests/snapshots/postgres_regress/timestamp@5.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "INSERT INTO TIMESTAMP_TBL VALUES ('tomorrow');"
---
InsertStmt@0..46
  Insert@0..6 "INSERT"
  Whitespace@6..7 " "
  Into@7..11 "INTO"
  Whitespace@11..12 " "
  RangeVar@12..25
    Ident@12..25 "TIMESTAMP_TBL"
  Whitespace@25..26 " "
  SelectStmt@26..44
    Values@26..32 "VALUES"
    Whitespace@32..33 " "
    Ascii40@33..34 "("
    List@34..44
      AConst@34..44
        Sconst@34..44 "'tomorrow'"
  Ascii41@44..45 ")"
  Ascii59@45..46 ";"

